Update ShowIn desktop environment lists

--- a/po/ca.po
+++ b/po/ca.po
@@ -50,14 +50,12 @@ msgstr "Nom genèric"
 msgid ""
 "A list of environments that should not display this entry. You can only use "
 "this key if \"OnlyShowIn\" is not set.\n"
-"Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
-"XFCE, Old"
+"Possible values include: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
 msgstr ""
 "Llista dels entorns d'escriptori que no han de mostrar aquesta entrada del "
 "menú. Aquesta clau només es pot utilitzar si «Mostra només en» no està "
 "definida.\n"
-"Entre els valors possibles s'inclouen: GNOME, KDE, LXDE, MATE, Razor, ROX, "
-"TDE, Unity, XFCE i Old."
+"Entre els valors possibles s'inclouen: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE i Old."
 
 #: ../data/ui/MenulibreWindow.ui.h:8
 msgid "Not Shown In"
@@ -68,14 +66,12 @@ msgid ""
 "A list of environments that should display this entry. Other environments "
 "will not display this entry. You can only use this key if \"NotShowIn\" is "
 "not set.\n"
-"Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
-"XFCE, Old"
+"Possible values include: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
 msgstr ""
 "Llista dels entorns d'escriptori que han de mostrar aquesta entrada de menú. "
 "Els altres entorns no mostraran aquesta entrada. Aquesta clau només es pot "
 "utilitzar si «No mostris en» no està definida.\n"
-"Entre els valors possibles s'inclouen: GNOME, KDE, LXDE, MATE, Razor, ROX, "
-"TDE, Unity, XFCE i Old."
+"Entre els valors possibles s'inclouen: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE i Old."
 
 #: ../data/ui/MenulibreWindow.ui.h:11
 msgid "Only Shown In"
