--- a/po/cs.po
+++ b/po/cs.po
@@ -50,12 +50,11 @@ msgstr "Obecný název"
 msgid ""
 "A list of environments that should not display this entry. You can only use "
 "this key if \"OnlyShowIn\" is not set.\n"
-"Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
-"XFCE, Old"
+"Possible values include: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
 msgstr ""
 "Seznam prostředí, které by neměly zobrazovat tuto položku. Tlačítko můžete "
 "použít pouze tehdy, pokud není nastaveno \"Zobrazitjenv\".\n"
-"Možné hodnoty jsou: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, XFCE, Old"
+"Možné hodnoty jsou: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
 
 #: ../data/ui/MenulibreWindow.ui.h:8
 msgid "Not Shown In"
@@ -66,13 +65,12 @@ msgid ""
 "A list of environments that should display this entry. Other environments "
 "will not display this entry. You can only use this key if \"NotShowIn\" is "
 "not set.\n"
-"Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
-"XFCE, Old"
+"Possible values include: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
 msgstr ""
 "Seznam prostředí, které by neměly zobrazovat tuto položku. Ostatní "
 "prostřední nezobrazí tuto položku. Tlačítko můžete použít, pokud klávesa "
 "\"Nenízobrazenov\" není nastavena.\n"
-"Možné hodnoty jsou: NOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, XFCE, Old"
+"Možné hodnoty jsou: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
 
 #: ../data/ui/MenulibreWindow.ui.h:11
 msgid "Only Shown In"
