--- a/po/el.po
+++ b/po/el.po
@@ -50,14 +50,12 @@ msgstr "Γενικό Όνομα"
 msgid ""
 "A list of environments that should not display this entry. You can only use "
 "this key if \"OnlyShowIn\" is not set.\n"
-"Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
-"XFCE, Old"
+"Possible values include: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
 msgstr ""
 "Μια λίστα περιβαλλόντων τα οποία δε θα έπρεπε να εμφανίζουν αυτή την "
 "καταχώρηση. Μπορείτε να χρησιμοποιήσετε αυτό το κλειδί μόνο εάν το \"Να "
 "Εμφανίζεται Μόνο Σε\" δεν έχει οριστεί.\n"
-"Οι πιθανές τιμές πριλαμβάνουν τα: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, "
-"Unity, XFCE, Old"
+"Οι πιθανές τιμές πριλαμβάνουν τα: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
 
 #: ../data/ui/MenulibreWindow.ui.h:8
 msgid "Not Shown In"
@@ -68,15 +66,13 @@ msgid ""
 "A list of environments that should display this entry. Other environments "
 "will not display this entry. You can only use this key if \"NotShowIn\" is "
 "not set.\n"
-"Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
-"XFCE, Old"
+"Possible values include: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
 msgstr ""
 "Μια λίστα περιβαλλόντων τα οποία θα έπρεπε να εμφανίζουν αυτή την "
 "καταχώρηση. Τα υπόλοιπα περιβάλλοντα δε θα εμφανίζουν αυτή την καταχώρηση. "
 "Μπορείτε να χρησιμοποιήσειτε αυτό το κλειδί μόνο εάν το \"Να Μην Εμφανίζεται "
 "Σε\" δεν έχει οριστεί.\n"
-"Οι πιθανές τιμές πριλαμβάνουν τα: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, "
-"Unity, XFCE, Old"
+"Οι πιθανές τιμές πριλαμβάνουν τα: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
 
 #: ../data/ui/MenulibreWindow.ui.h:11
 msgid "Only Shown In"
