--- a/po/es.po
+++ b/po/es.po
@@ -50,14 +50,12 @@ msgstr "Nombre genérico"
 msgid ""
 "A list of environments that should not display this entry. You can only use "
 "this key if \"OnlyShowIn\" is not set.\n"
-"Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
-"XFCE, Old"
+"Possible values include: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
 msgstr ""
 "Lista de los entornos de escritorio que no deben mostrar esta entrada del "
 "menú. Esta clave solo se puede usar si «Solo mostrar en» no está "
 "configurada.\n"
-"Entre los valores posibles se incluyen: GNOME, KDE, LXDE, MATE, Razor, ROX, "
-"TDE, Unity, XFCE y Old."
+"Entre los valores posibles se incluyen: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE y Old."
 
 #: ../data/ui/MenulibreWindow.ui.h:8
 msgid "Not Shown In"
@@ -68,14 +66,12 @@ msgid ""
 "A list of environments that should display this entry. Other environments "
 "will not display this entry. You can only use this key if \"NotShowIn\" is "
 "not set.\n"
-"Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
-"XFCE, Old"
+"Possible values include: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
 msgstr ""
 "Lista de los entornos de escritorio que deben mostrar esta entrada del menú. "
 "Los demás entornos no mostrarán esta entrada. Esta clave solo se puede usar "
 "si «No mostrar en» no está configurada.\n"
-"Entre los valores posibles se incluyen: GNOME, KDE, LXDE, MATE, Razor, ROX, "
-"TDE, Unity, XFCE y Old."
+"Entre los valores posibles se incluyen: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE y Old."
 
 #: ../data/ui/MenulibreWindow.ui.h:11
 msgid "Only Shown In"
