--- a/po/fr.po
+++ b/po/fr.po
@@ -51,14 +51,12 @@ msgstr "Nom générique"
 msgid ""
 "A list of environments that should not display this entry. You can only use "
 "this key if \"OnlyShowIn\" is not set.\n"
-"Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
-"XFCE, Old"
+"Possible values include: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
 msgstr ""
 "Une liste des environnements qui ne devraient pas afficher cette entrée. "
 "Vous ne pouvez utiliser cette clé que si « Afficher seulement dans » n'est "
 "pas défini.\n"
-"Parmi les valeurs possibles : GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, "
-"Unity, XFCE, Old"
+"Parmi les valeurs possibles : Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
 
 #: ../data/ui/MenulibreWindow.ui.h:8
 msgid "Not Shown In"
@@ -69,14 +67,12 @@ msgid ""
 "A list of environments that should display this entry. Other environments "
 "will not display this entry. You can only use this key if \"NotShowIn\" is "
 "not set.\n"
-"Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
-"XFCE, Old"
+"Possible values include: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
 msgstr ""
 "Une liste des environnements qui devraient afficher cette entrée. Les autres "
 "environnements n'afficheront pas cette entrée. Vous ne pouvez utiliser cette "
 "clé que si « Ne pas afficher dans » n'est pas défini.\n"
-"Parmi les valeurs possibles : GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, "
-"Unity, XFCE, Old"
+"Parmi les valeurs possibles : Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
 
 #: ../data/ui/MenulibreWindow.ui.h:11
 msgid "Only Shown In"
