--- a/po/lt.po
+++ b/po/lt.po
@@ -49,12 +49,11 @@ msgstr "Bendrinis pavadinimas"
 msgid ""
 "A list of environments that should not display this entry. You can only use "
 "this key if \"OnlyShowIn\" is not set.\n"
-"Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
-"XFCE, Old"
+"Possible values include: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
 msgstr ""
 "Aplinkų, kurios neturėtų rodyti šio įrašo, sąrašas. Galite naudoti šį raktą "
 "tik tuo atveju, jei nėra nustatytas \"RodomaTik\".\n"
-"Galimos reikšmės:  GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, XFCE, Old"
+"Galimos reikšmės:  Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
 
 #: ../data/ui/MenulibreWindow.ui.h:8
 msgid "Not Shown In"
@@ -65,13 +64,12 @@ msgid ""
 "A list of environments that should display this entry. Other environments "
 "will not display this entry. You can only use this key if \"NotShowIn\" is "
 "not set.\n"
-"Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
-"XFCE, Old"
+"Possible values include: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
 msgstr ""
 "Aplinkų, kurios turėtų rodyti šį įrašą, sąrašas. Kitos aplinkos šio įrašo "
 "nerodys. Galite naudoti šį raktą tik tuo atveju, jei nėra nustatytas "
 "\"Nerodoma\".\n"
-"Galimos reikšmės:  GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, XFCE, Old"
+"Galimos reikšmės:  Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
 
 #: ../data/ui/MenulibreWindow.ui.h:11
 msgid "Only Shown In"
