--- a/po/pl.po
+++ b/po/pl.po
@@ -50,13 +50,11 @@ msgstr "Nazwa ogólna"
 msgid ""
 "A list of environments that should not display this entry. You can only use "
 "this key if \"OnlyShowIn\" is not set.\n"
-"Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
-"XFCE, Old"
+"Possible values include: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
 msgstr ""
 "Lista środowisk, które zapewne nie będą wyświetlały tego elementu. Możesz "
 "użyć tego tylko jeśli \"OnlyShowIn\" nie jest ustawione.\n"
-"Możliwe wartości zawierają:  GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
-"XFCE i Old."
+"Możliwe wartości zawierają:  Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE i Old."
 
 #: ../data/ui/MenulibreWindow.ui.h:8
 msgid "Not Shown In"
@@ -67,13 +65,11 @@ msgid ""
 "A list of environments that should display this entry. Other environments "
 "will not display this entry. You can only use this key if \"NotShowIn\" is "
 "not set.\n"
-"Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
-"XFCE, Old"
+"Possible values include: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
 msgstr ""
 "Lista środowisk, które powinny wyświetlić ten wpis. Inne środowiska nie będą "
 "go używały. Możesz użyć tej tylko jeśli \"OnlyShowIn\" nie jest ustawione. "
-"Możliwe wartości zawierają:  GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
-"XFCE i Old."
+"Możliwe wartości zawierają:  Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE i Old."
 
 #: ../data/ui/MenulibreWindow.ui.h:11
 msgid "Only Shown In"
