--- a/po/ru.po
+++ b/po/ru.po
@@ -54,11 +54,10 @@ msgstr "Обобщённое имя"
 msgid ""
 "A list of environments that should not display this entry. You can only use "
 "this key if \"OnlyShowIn\" is not set.\n"
-"Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
-"XFCE, Old"
+"Possible values include: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
 msgstr ""
 "Ключ: \"NotShowIn\" (Не показывать в). Тип: строка.\n"
-"Значения: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, XFCE, Old.\n"
+"Значения: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE, Old.\n"
 "\n"
 "Список окружений, в которых пункт меню не будет отображаться. Использование\n"
 "ключа возможно только в случае, если не установлен ключ OnlyShowIn"
@@ -72,11 +71,10 @@ msgid ""
 "A list of environments that should display this entry. Other environments "
 "will not display this entry. You can only use this key if \"NotShowIn\" is "
 "not set.\n"
-"Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
-"XFCE, Old"
+"Possible values include: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
 msgstr ""
 "Ключ: \"OnlyShowIn\" (Показать только в). Тип: строка.\n"
-"Значения: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, XFCE, Old.\n"
+"Значения: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE, Old.\n"
 "\n"
 "Список окружений, в которых пункт меню будет отображаться.\n"
 "Другие окружения не будут отображать этот пункт. Использование\n"
