--- a/po/sk.po
+++ b/po/sk.po
@@ -50,13 +50,11 @@ msgstr "Všeobecný názov"
 msgid ""
 "A list of environments that should not display this entry. You can only use "
 "this key if \"OnlyShowIn\" is not set.\n"
-"Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
-"XFCE, Old"
+"Possible values include: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
 msgstr ""
 "Zoznam prostredí, ktoré nezobrazia tento záznam. Môžete použiť tento kľúč "
 "iba vtedy, ak nie je nastavená voľba „OnlyShowIn“.\n"
-"Použiteľné hodnoty sú: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, XFCE, "
-"Old"
+"Použiteľné hodnoty sú: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
 
 #: ../data/ui/MenulibreWindow.ui.h:8
 msgid "Not Shown In"
@@ -67,14 +65,12 @@ msgid ""
 "A list of environments that should display this entry. Other environments "
 "will not display this entry. You can only use this key if \"NotShowIn\" is "
 "not set.\n"
-"Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
-"XFCE, Old"
+"Possible values include: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
 msgstr ""
 "Zoznam prostredí, ktoré zobrazia tento záznam. Iné prostredia tento záznam "
 "nezobrazia. Môžete použiť tento kľúč iba vtedy, ak nie je nastavená voľba "
 "„NotShowIn“.\n"
-"Použiteľné hodnoty sú: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, XFCE, "
-"Old"
+"Použiteľné hodnoty sú: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
 
 #: ../data/ui/MenulibreWindow.ui.h:11
 msgid "Only Shown In"
