--- a/po/sr.po
+++ b/po/sr.po
@@ -51,13 +51,11 @@ msgstr "Опште име"
 msgid ""
 "A list of environments that should not display this entry. You can only use "
 "this key if \"OnlyShowIn\" is not set.\n"
-"Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
-"XFCE, Old"
+"Possible values include:Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
 msgstr ""
 "Списак окружења које не треба да приказују ову ставку. Овај кључможете да "
 "употребљавате ако није поставено „Само приказуј у“.\n"
-"Могуће вредности су: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, XFCE, "
-"Old"
+"Могуће вредности су: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
 
 #: ../data/ui/MenulibreWindow.ui.h:8
 msgid "Not Shown In"
@@ -68,14 +66,12 @@ msgid ""
 "A list of environments that should display this entry. Other environments "
 "will not display this entry. You can only use this key if \"NotShowIn\" is "
 "not set.\n"
-"Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
-"XFCE, Old"
+"Possible values include: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
 msgstr ""
 "Списак окружења које треба да приказују ову ставку. У осталим окружењима се "
 "ставка неће приказивати. Овај кључ можете да употребљавате ако није "
 "поставено „Не приказуј у“.\n"
-"Могуће вредности су: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, XFCE, "
-"Old"
+"Могуће вредности су: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
 
 #: ../data/ui/MenulibreWindow.ui.h:11
 msgid "Only Shown In"
