--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -50,11 +50,9 @@ msgstr "常用名称"
 msgid ""
 "A list of environments that should not display this entry. You can only use "
 "this key if \"OnlyShowIn\" is not set.\n"
-"Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
-"XFCE, Old"
+"Possible values include: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
 msgstr ""
-"此项目不应该出现在这些桌面环境中。您仅可以选择“仅在其中显示”选项。可能的选项包括：GNOME、KDE、LXDE、MATE、Razor、ROX、TDE、U"
-"nity、XFCE、Old"
+"此项目不应该出现在这些桌面环境中。您仅可以选择“仅在其中显示”选项。可能的选项包括：Cinnamon、EDE、GNOME、KDE、LXDE、LXQt、MATE、Pantheon、Razor、ROX、TDE、Unity、XFCE、Old"
 
 #: ../data/ui/MenulibreWindow.ui.h:8
 msgid "Not Shown In"
@@ -65,11 +63,9 @@ msgid ""
 "A list of environments that should display this entry. Other environments "
 "will not display this entry. You can only use this key if \"NotShowIn\" is "
 "not set.\n"
-"Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
-"XFCE, Old"
+"Possible values include: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
 msgstr ""
-"此项目应当出现在这些桌面环境，而还是其它桌面环境中。您仅可以选择“仅在其中显示”选项。可能的选项包括：GNOME、KDE、LXDE、MATE、Razor、"
-"ROX、TDE、Unity、XFCE、Old"
+"此项目应当出现在这些桌面环境，而还是其它桌面环境中。您仅可以选择“仅在其中显示”选项。可能的选项包括：Cinnamon、EDE、GNOME、KDE、LXDE、LXQt、MATE、Pantheon、Razor、ROX、TDE、Unity、XFCE、Old"
 
 #: ../data/ui/MenulibreWindow.ui.h:11
 msgid "Only Shown In"
