--- a/po/hr.po
+++ b/po/hr.po
@@ -50,13 +50,11 @@ msgstr ""
 msgid ""
 "A list of environments that should not display this entry. You can only use "
 "this key if \"OnlyShowIn\" is not set.\n"
-"Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
-"XFCE, Old"
+"Possible values include: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
 msgstr ""
 "Lista radnih okruženja koja ne bi trebala prikazivati ovaj unos. Možete "
 "koristiti ovu tipku ako \"Prikaži samo u\" nije postavljena.\n"
-"Moguće vrijednosti uključuju: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, "
-"Unity, XFCE, Old"
+"Moguće vrijednosti uključuju: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
 
 #: ../data/ui/MenulibreWindow.ui.h:8
 msgid "Not Shown In"
@@ -67,13 +65,11 @@ msgid ""
 "A list of environments that should display this entry. Other environments "
 "will not display this entry. You can only use this key if \"NotShowIn\" is "
 "not set.\n"
-"Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
-"XFCE, Old"
+"Possible values include: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
 msgstr ""
 "Lista radnih okruženja koja bi trebala prikazivati ovaj unos. Možete "
 "koristiti ovu tipku ako \"Prikaži samo u\" nije postavljena.\n"
-"Moguće vrijednosti uključuju: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, "
-"Unity, XFCE, Old"
+"Moguće vrijednosti uključuju: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
 
 #: ../data/ui/MenulibreWindow.ui.h:11
 msgid "Only Shown In"
