--- a/po/ms.po
+++ b/po/ms.po
@@ -50,13 +50,11 @@ msgstr "Nama Generik"
 msgid ""
 "A list of environments that should not display this entry. You can only use "
 "this key if \"OnlyShowIn\" is not set.\n"
-"Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
-"XFCE, Old"
+"Possible values include: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
 msgstr ""
 "Senarai persekitaran yang tidak seharusnya papar masukan ini. Anda hanya "
 "boleh guna kunci ini jika \"OnlyShowIn\" tidak ditetapkan.\n"
-"Nilai yang mungkin termasuklah: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, "
-"Unity, XFCE, Old"
+"Nilai yang mungkin termasuklah: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
 
 #: ../data/ui/MenulibreWindow.ui.h:8
 msgid "Not Shown In"
@@ -67,14 +65,12 @@ msgid ""
 "A list of environments that should display this entry. Other environments "
 "will not display this entry. You can only use this key if \"NotShowIn\" is "
 "not set.\n"
-"Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
-"XFCE, Old"
+"Possible values include: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
 msgstr ""
 "Satu senarai persekitaran yang patutu paparkan masukan ini. Lain-lain "
 "persekitaran tidak akan paparkan masukan ini. Anda hanya boleh guna kunci "
 "ini jika \"NotShowIn\" tidak ditetapkan.\n"
-"Nilai yang mungkin termasuklah: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, "
-"Unity, XFCE, Old"
+"Nilai yang mungkin termasuklah: Cinnamon, EDE, GNOME, KDE, LXDE, LXQt, MATE, Pantheon, Razor, ROX, TDE, Unity, XFCE, Old"
 
 #: ../data/ui/MenulibreWindow.ui.h:11
 msgid "Only Shown In"
