--- a/NEWS
+++ b/NEWS
@@ -12,6 +12,10 @@ UNRELEASED, MenuLibre 2.1.4
   . Use the folder icon instead of applications-other (LP: #1605905)
   . Use switches for Hidden and DBusActivatable keys
   . Include additional non-standard by commonly-used categories
+  . Added support for "Implements" key
+  . Added Cinnamon, EDE, LXQt, and Pantheon to list of support ShowIn DEs
+  . Replaced KeyFile backend with GLib.KeyFile for better support
+  . Version key bumped to the 1.1 version of the specification
 - Bug Fixes
   . Invalid categories added to first launcher in top-level directory under
     XFCE (LP: #1605973)
@@ -19,6 +23,8 @@ UNRELEASED, MenuLibre 2.1.4
     (LP: #1315880)
   . Some categories cannot be removed from a launcher (LP: #1307002)
   . Make hidden items italic (LP: #1310261)
+  . Fix display of newly hidden directories
+  . Fix markup errors in tooltips and labels
 - Updated Translations:
   . Brazilian Portuguese, Catalan, Croatian, Danish, French, Galician, German,
     Italian, Kazakh, Lithuanian, Polish, Russian, Slovak, Spanish, Swedish,
