--- a/po/fr.po
+++ b/po/fr.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-01-09 22:24-0500\n"
-"PO-Revision-Date: 2018-01-09 01:48+0000\n"
-"Last-Translator: jc1 <jc1.quebecos@gmail.com>\n"
+"PO-Revision-Date: 2017-10-18 11:59+0000\n"
+"Last-Translator: marius DAVID <Unknown>\n"
 "Language-Team: French <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2018-01-10 05:05+0000\n"
+"X-Launchpad-Export-Date: 2018-01-10 05:11+0000\n"
 "X-Generator: Launchpad (build 18521)\n"
 "Language: frnech\n"
 "X-Poedit-SourceCharset: UTF-8\n"
