--- a/po/it.po
+++ b/po/it.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-01-09 22:24-0500\n"
-"PO-Revision-Date: 2018-01-09 01:48+0000\n"
-"Last-Translator: Man from Mars <manfrommars@libero.it>\n"
+"PO-Revision-Date: 2016-06-23 22:23+0000\n"
+"Last-Translator: enrico <milanesi.enrico@gmail.com>\n"
 "Language-Team: Italian <it@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2018-01-10 05:05+0000\n"
+"X-Launchpad-Export-Date: 2018-01-10 05:11+0000\n"
 "X-Generator: Launchpad (build 18521)\n"
 "Language: it\n"
 
